--- a/plantilla/site/css/style.css
+++ b/plantilla/site/css/style.css
@@ -246,8 +246,8 @@ header {
 	display: block;
 	position: relative;
 	z-index: 999;
-	padding: 50px 0 0px;
-	border-top: 3px solid #a2cac2;
+	padding: 10px 0 0px;
+	/*border-top: 3px solid #a2cac2;*/
 	border-bottom: 3px solid #c3dcd7;
 }
 
@@ -255,10 +255,10 @@ header {
 	border-top-width: 1px;
 }
 
-.page1 header {
+/*.page1 header {
 	border-bottom: 0;
 	border-top-width: 3px;
-}
+}*/
 
 
 h1 {
@@ -267,7 +267,7 @@ h1 {
 	font-size: 0;
 	text-align: center;
 	line-height: 0;
-	margin-bottom: 45px;
+	margin-bottom: 25px;
 
 }
 h1 a {
