--- a/plantilla/site/css/form.css
+++ b/plantilla/site/css/form.css
@@ -249,11 +249,6 @@
   }
 }
 
-form.sky-form{width: 960px; margin: 0 auto;}
-.icon-ndoc:before {content: "#";}
-.icon-edad:before {content: "\f007+";}
-.sky-form .paqtur select {height: auto;}
-
 /*datepicker*/
 .ui-datepicker {
 	display: none;
@@ -340,3 +335,10 @@ content: "\f053";
 .fa-chevron-right:before {
 content: "\f054";
 }
+
+/*sky form fixed*/
+form.sky-form{width: 960px; margin: 0 auto;}
+.icon-ndoc:before {content: "#";}
+.icon-edad:before {content: "\f007+";}
+.sky-form .paqtur select {height: auto;}
+.sky-form .select i {pointer-events: none;}
