--- a/ventas-paquetes-turisticos/web/assets/css/form.css
+++ b/ventas-paquetes-turisticos/web/assets/css/form.css
@@ -1,145 +1,344 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 26/10/2014, 10:57:08 PM
-    Author     : ldiez
-*/
-
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-
-ol,ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
-table{border-collapse:collapse;border-spacing:0}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(http://themes.googleusercontent.com/static/fonts/lato/v7/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+/****Form****/
+#form {
+	padding-top:  4px;
 }
 
-.login  form{
-	background: #448ed3 ;
-	font-family: "Lato" ;
-}
-.login form{
-	width:250px;
-	height: auto;
-	margin: auto;
-	margin-top: 10%;
-}
-.login .avatar {
+#form input {
 	width: 100%;
-	margin: auto;
-	width: 65px;
-	border-radius: 100px;
-	height: 65px;
-	background: #448ed3 ;
+	height: 29px;
+	float:left;
+	background: #fcfcfc;
+	box-sizing: border-box;
+	-webkit-appearance: none;
+	-moz-box-sizing: border-box; /*Firefox 1-3*/
+	-webkit-box-sizing: border-box; /* Safari */
+	font: 14px/18px  'Open Sans', sans-serif;
+	color:#8c8989;
+	border: 1px solid #c6c4c4;
+
+    padding: 5px 18px 6px;
+
+}
+
+
+#form textarea {
+	width: 100%;
+	height: 237px;
 	position: relative;
-	bottom: -15px;
+	resize:none;
+	overflow: hidden;
+	box-sizing: border-box;
+	-webkit-appearance: none;
+	-moz-box-sizing: border-box; /*Firefox 1-3*/
+	-webkit-box-sizing: border-box; /* Safari */
+	float:left;
+	margin: 0;
+	font: 14px/18px  'Open Sans', sans-serif;
+	color:#8c8989;
+	border: 1px solid #c6c4c4;
+	background: #fcfcfc;
+    padding: 10px 18px 6px;
+
+	
 }
-.login .avatar img {
-	width: 55px;
-	height: 55px;
-	border-radius: 100px;
-	margin: auto;
-	border:3px solid #fff;
+
+
+
+#form ._placeholder {
+	transition: 0.5s ease;
+	-o-transition: 0.5s ease;
+	-webkit-transition: 0.5s ease;
+	font: 14px/18px  'Open Sans', sans-serif;
+	color:#8c8989;
+	border: 1px solid transparent;
+    padding: 5px 18px 6px;
+	height: 29px !important;
+	width: 100% !important;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box; /*Firefox 1-3*/
+	-webkit-box-sizing: border-box; /* Safari */
+	position: absolute;
+	right: 0;
+	top: 0 !important;
+	bottom: 0;
+	left: 0;
+	cursor: text !important;
 	display: block;
 }
-.login input {
-	border: none;
-	background: #fff;
-  font-family:Lato ;
-  font-weight:700 ;
-	display: block;
-	height: 40px;
-	outline: none;
-	width: calc(100% - 24px) ;
-	margin: auto;
-	padding: 6px 12px 6px 12px;
+
+#form ._placeholder.hidden {
+	display: none;
 }
-login.bar {
+
+#form ._placeholder.focused {
+	opacity: 0.3;
+}
+
+
+#form .message ._placeholder {
+	height: 100% !important;
+	padding-top: 10px;
+}
+#form label {
+	position:relative;
+	display: block;
+	min-height: 40px;
+	float: left;
+	width: 194px;
+}
+
+#form label+label {
+	margin-left: 19px;
+}
+
+#form label.message {
 	width: 100%;
-	height: 1px;
-	background: #fff ;
+	margin-left: 0;
 }
-login .bar i {
-	width: 95%;
-	margin: auto;
-	height: 1px ;
-	display: block;
-	background: #d1d1d1;
-}
-.login input[type="text"] {
-	border-radius: 7px 7px 0px 0px ;
-}
-.login input[type="password"] {
-	border-radius: 0px 0px 7px 7px ;
-}
-.forgot_link {
-	color: #83afdf ;
-	color: #83afdf;
-	text-decoration: none;
+
+
+
+
+#form .error-message, #form .empty-message {
+	color: #E02A05;
 	font-size: 11px;
-	position: relative;
-	left: 193px;
-	top: -36px;
+	line-height:14px;
+	width:auto;
+	position: absolute;
+	z-index: 999;
+
+	top: 10px;
+	opacity: 0;
+	right: 5px;
+	float:left;
+	transition: 0.5s ease;
+	-o-transition: 0.5s ease;
+	-webkit-transition: 0.5s ease;
 }
-.login .submit{
+
+/*#form .message .error-message, #form .message .empty-message {
+	bottom: -16px;
+}*/
+
+
+
+
+#form .invalid .error-message, #form .empty .empty-message {
+	opacity: 1;
+}
+
+.btns {
+	text-align: right;
+	padding-top: 26px;
+	font-size: 0;
+	line-height: 0;
+
+}
+
+.btns a.btn {
+	display: inline-block;
+	margin: 0;
+	padding: 3px 30px 2px;
+}
+
+.btns a.btn+a.btn {
+	margin-left: 11px;
+}
+
+
+
+
+.message br {
+	height: 0;
+	line-height: 0;
+}
+
+#form .success-message {
+	position: absolute;
+	border: 1px solid #c6c4c4;
+   	background-color: #fcfcfc;
 	width: 100%;
-	border-radius: 7px;
-	background: #b6ee65;
-	text-decoration: center;
-	border: none;
-	color: #51771a;
-  margin-top:-5px;
-	padding-top: 14px;
-	padding-bottom: 14px;
-	outline: none;
-	font-size: 13px;	
-	border-bottom: 3px solid #307d63;
+	color: #5f5e4e;
+	display: none;
+	opacity: 0;
+	height: 40px;
+	text-align: center;
+	padding: 9px 10px;
+	z-index: 999;
+	font-size: 13px;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box; /*Firefox 1-3*/
+	-webkit-box-sizing: border-box; /* Safari */
+	transition: 0.5s ease;
+	-o-transition: 0.5s ease;
+	-webkit-transition: 0.5s ease;
+}
+
+#form.success .success-message {
+	display: block;
+	opacity: 1;
+}
+
+.success_wrapper {
+	position: relative;	
+}
+
+@media only screen and (max-width: 995px) {
+
+#form {
+}
+
+
+#form label {
+	float: none !important;	
+	width: 100%;
+	margin-left: 0 !important;
+}
+
+#form input {
+	margin-bottom: 10px;
+}
+
+
+#form .success-message {
+	width: 100%;
+}
+
+.btns {
+	padding-right: 0;
+}
+
+#form label.email {
+	width: 100%;
+	margin: 0;
+}
+
+.map figure {
+	float: left !important;
+	margin-right: 0px !important;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+
+.map figure {
+	width: 100% !important;
+	float: none !important;
+	display: block !important;
+	margin-right: 0px !important;
+}
+  .btns {
+		padding-bottom: 0;  
+  }
+  
+  #form textarea {
+		height: 300px !important; 
+  }
+
+   #form {
+ 	padding-right: 0;
+ }
+  
+}
+@media only screen and (max-width: 479px) {
+
+  #form textarea {
+		height: 200px !important;  
+  }
+}
+
+/*datepicker*/
+.ui-datepicker {
+	display: none;
+	padding: 10px 12px;
+	background: rgba(255,255,255,1);
+	box-shadow: 0 0 10px rgba(0,0,0,.3);
+	font: 13px/1.55 'Open Sans', Helvetica, Arial, sans-serif;
+	text-align: center;
+	color: #666;
+}
+.ui-datepicker a {
+	color: #404040;
+}
+.ui-datepicker-header {
+	position: relative;
+	margin: -10px -12px 10px;
+	padding: 10px;
+	border-bottom: 1px solid rgba(0,0,0,.1);
+	font-size: 15px;
+	line-height: 27px;
+}
+.ui-datepicker-prev, 
+.ui-datepicker-next {
+	position: absolute;
+	top: 0;
+	display: block;
+	width: 47px;
+	height: 47px;
+	font-size: 15px;
+	line-height: 47px;
+	text-decoration: none;
 	cursor: pointer;
 }
-
-/*** formulario reservas ***/
-.datos-turista .fila {
-    width: 100%;
-    text-align: center;
-    float: left;
-    margin-bottom: 10px;
+.ui-datepicker-prev {
+	left: 0;
+}
+.ui-datepicker-next {
+	right: 0;
+}
+.ui-datepicker-calendar {
+	border-collapse: collapse;
+	font-size: 13px;
+	line-height: 27px;
+}
+.ui-datepicker-calendar th {
+	color: #999;
+}
+.ui-datepicker-calendar a,
+.ui-datepicker-calendar span {
+	display: block;
+	width: 31px;
+	margin: auto;
+	text-decoration: none;
+	color: #404040;
+}
+.ui-datepicker-calendar a:hover {
+	background: rgba(0,0,0,.05);	
+}
+.ui-datepicker-calendar span {
+	color: #bfbfbf;
+}
+.ui-datepicker-today a {
+	font-weight: 700;
+}
+.ui-datepicker-calendar .ui-state-active {
+	background: rgba(0,0,0,.05);
+	cursor: default;	
+}
+.ui-datepicker-inline {
+	border: 2px solid #e5e5e5;
+	background: #fff;
+	box-shadow: none;
+}
+.ui-datepicker-inline .ui-datepicker-header {
+	line-height: 47px;
+}
+.ui-datepicker-inline .ui-datepicker-calendar {
+	width: 100%;
+}
+i.fa-chevron-left, i.fa-chevron-right{margin-top: 15px;}
+.fa-chevron-left:before {
+content: "\f053";
+}
+.fa-chevron-right:before {
+content: "\f054";
 }
 
-.datos-turista .texto {
-    text-align: right;
-    float: left;
-    width: 50%;
-    padding-right: 20px;
-}
-
-.datos-turista .campo {
-    text-align: left;
-    float: left;
-    width: 50%;
-}
-
-select, input[type="text"] {
-    width: 160px;
-    box-sizing: border-box;
-}
-section {
-    padding: 8px;
-    background-color: #f0f0f0;
-    overflow: auto;
-}
-section > div {
-    float: left;
-    padding: 4px;
-}
-section > div + div {
-    width: 40px;
-    text-align: center;
-}
+/*sky form fixed*/
+form.sky-form{width: 960px; margin: 0 auto;}
+.icon-ndoc:before {content: "#";}
+.icon-edad:before {content: "\f007+";}
+.sky-form .paqtur select {height: auto;}
+.sky-form .select i {pointer-events: none;}
